--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,65 @@
-/* You can add global styles to this file, and also import other style files */
+/* src/styles.scss */
+@import '@angular/material/prebuilt-themes/indigo-pink.css'; // Example of a pre-built theme
+
+
+
+// body {
+//   font-family: Arial, sans-serif;
+//   margin: 0;
+//   padding: 0;
+// }
+
+// // nav {
+// //   background-color: #f0f0f0;
+// //   padding: 10px;
+
+// //   a {
+// //     position: relative; /* Ensure the links are above other elements */
+// //     z-index: 1;
+// //     margin: 0 10px;
+// //     text-decoration: none;
+// //     color: #333;
+
+// //     &:hover {
+// //       color: #007bff;
+// //     }
+// //   }
+// // }
+
+// h1 {
+//   color: #333;
+// }
+
+// form {
+//   display: flex;
+//   flex-direction: column;
+
+//   label {
+//     margin-top: 10px;
+//   }
+
+//   input {
+//     padding: 8px;
+//     margin-top: 5px;
+//     font-size: 1em;
+//   }
+
+//   button {
+//     margin-top: 15px;
+//     padding: 10px;
+//     background-color: #007bff;
+//     color: white;
+//     border: none;
+//     cursor: pointer;
+
+//     &:hover {
+//       background-color: #0056b3;
+//     }
+//   }
+// }
+
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
