Make the style consistent

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,16 +1,35 @@
-<div class="about-us-container">
-  <div class="introduction">
-    <h2>Welcome to Think AI Today</h2>
-    <p>
-      At Think AI Today, we are committed to empowering individuals with the knowledge of Artificial Intelligence, particularly Generative AI, as an essential life skill for the future.
-    </p>
-    <ul>
-      <li>Making knowledge of Artificial Intelligence, especially Generative AI, accessible to everyone.</li>
-      <li>Understanding AI is not just an important skill—it's a vital life skill for the future.</li>
-      <li>Empowering individuals of all ages, starting with middle and high school students, to harness the transformative potential of AI.</li>
-      <li>Fostering a supportive learning environment to inspire curiosity, creativity, and confidence in navigating AI technology.</li>
-      <li>Building a brighter future where AI knowledge is a fundamental part of every individual's toolkit.</li>
-    </ul>
+<div class="page-container">
+  <div class="page-container-header">
+    <div class="page-container-header-text">About Us: Our Mission</div>
+
   </div>
+  <div class="page-container-body">
+  <p class="mission">
+    At Think AI Today, we are committed to empowering individuals with the
+    knowledge of Artificial Intelligence, particularly Generative AI, as an
+    essential life skill for the future.
+  </p>
+  <ul class="details">
+    <li>
+      Making knowledge of Artificial Intelligence, especially Generative AI,
+      accessible to everyone.
+    </li>
+    <li>
+      Understanding AI is not just an important skill—it's a vital life skill
+      for the future.
+    </li>
+    <li>
+      Empowering individuals of all ages, starting with middle and high school
+      students, to harness the transformative potential of AI.
+    </li>
+    <li>
+      Fostering a supportive learning environment to inspire curiosity,
+      creativity, and confidence in navigating AI technology.
+    </li>
+    <li>
+      Building a brighter future where AI knowledge is a fundamental part of
+      every individual's toolkit.
+    </li>
+  </ul>
   </div>
-  
+</div>
