--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,4 +1,11 @@
-<!-- src/app/components/contact-us/contact-us.component.html -->
-
-<h1>Contact Us</h1>
-<p>For inquiries, please contact us through <a href="mailto:team@thinkaitoday.com">Email</a>
+<div class="page-container">
+  <div class="page-container-header">
+    <div class="page-container-header-text">Contact Us</div>
+  </div>
+  <div class="page-container-body">
+    <p class>
+      For inquiries, please contact us through
+      <a href="mailto:team@thinkaitoday.com">Email</a>
+    </p>
+  </div>
+</div>
