--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,5 +9,12 @@
     <button mat-raised-button color="accent" routerLink="/registration">
       Get Started
     </button>
+    <div>
+      <br>
+      </div>
+    <p>
+      Have questions? Reach us via <a href="mailto:team@thinkaitoday.com">Email</a>.
+    </p>
+
   </div>
 </section>
