Add the new component - Trivia

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,21 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row> <span class="header">Think AI Today</span></mat-toolbar-row>
 
-  <mat-toolbar-row >
+  <mat-toolbar-row>
     <nav>
       <a mat-button routerLink="/home">Home</a>
-      <a mat-button routerLink="/our-courses">Our Courses</a>
+      <a mat-button routerLink="/our-courses">Courses</a>
       <!-- <a mat-button routerLink="/registration">Registration</a> -->
-      <!-- <a mat-button routerLink="/lab-station">Lab Station</a> -->
-      <a mat-button routerLink="/about-us">About Us</a>
-      <a mat-button routerLink="/news" class="updates-link">
-        <mat-icon>campaign</mat-icon> Updates
-      </a>
-      <!-- <a mat-button routerLink="/contact-us">Contact Us</a> -->
 
+      <a mat-button routerLink="/about-us">About Us</a>
+
+      <a mat-button routerLink="/trivia">Trivia </a>
+
+      <a mat-button routerLink="/news" class="updates-link">
+        <mat-icon >campaign</mat-icon> Updates
+      </a>
+      <!-- <a mat-button routerLink="/lab-station">Lab Station</a> -->
+      <!-- <a mat-button routerLink="/contact-us">Contact Us</a> -->
     </nav>
   </mat-toolbar-row>
 </mat-toolbar>
