--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,24 +1,30 @@
 <div class="page-container">
-    <div class="page-container-header">
-      <div class="page-container-header-text">Latest News & Updates</div>
-    </div>
-  
-    <div class="page-container-body">
-      <mat-card *ngFor="let update of newsUpdates" class="news-card">
-        <mat-card-header>
-          <mat-card-title>{{ update.title }}</mat-card-title>
-          <mat-card-subtitle>{{ update.date }}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <p>{{ update.content }}</p>
-          <p *ngIf="update.showMore">{{ update.additionalDetails }}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button (click)="toggleShowMore(update)">
-            {{ update.showMore ? 'Show Less' : 'Read More' }}
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
+  <div class="page-container-header">
+    <div class="page-container-header-text">Latest News & Updates</div>
   </div>
-  
+
+  <div class="page-container-body">
+    <!-- Loop through all news updates -->
+    <mat-card *ngFor="let update of newsUpdates" class="news-card">
+      <mat-card-header>
+        <mat-card-title>{{ update.title }}</mat-card-title>
+        <mat-card-subtitle>{{ update.date }}</mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content>
+        <!-- Display the brief content -->
+        <p>{{ update.content }}</p>
+
+        <!-- Conditionally display additional details -->
+        <div *ngIf="update.showMore" [innerHTML]="update.additionalDetails"></div>
+      </mat-card-content>
+
+      <mat-card-actions>
+        <!-- Button to toggle additional details visibility -->
+        <button mat-button (click)="toggleShowMore(update)">
+          {{ update.showMore ? 'Show Less' : 'Show More' }}
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
