Add the timer for flash message on homescreen

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,9 @@
   </mat-card>
 </section>
 
-<section class="hero">
+<section class="hero"
+  [ngClass]="{ 'hero-height-flash': flashNews }"
+>
   <!-- Existing hero section content -->
   <div>
     <h1>Unlock the Future: Generative AI Skills for Everyone</h1>
