Add Participant corner

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,34 @@
 
-  .header {
-    font-size:1.75em;
+.header {
+  font-size:1.75em;
+}
+
+a:hover {
+  background-color: #ffffff; /* Light blue hover background */
+  color: #1976d2; /* Blue hover text color */
+
+  mat-icon {
+    color: #1976d2;
+}
+}
+
+/* Style for mat-menu-item */
+button[mat-menu-item] {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #424242; /* Default text color */
+  padding: 12px 24px; /* Adjust padding for better spacing */
+  text-align: left;
+  border-radius: 4px; /* Slightly rounded corners */
+
+  /* Add hover effects */
+  &:hover {
+    background-color: #e3f2fd; /* Light blue hover background */
+    color: #1976d2; /* Blue hover text color */
+
+    mat-icon {
+      color: #1976d2;
+  }
   }
 
-  a:hover {
-    text-decoration: underline;
-  }
-
+}
