--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,11 +18,15 @@
       <!-- <a mat-button routerLink="/lab-station">Lab Station</a> -->
       <!-- <a mat-button routerLink="/contact-us">Contact Us</a> -->
       <mat-menu #participantCornerMenu="matMenu">
-        <button mat-menu-item [routerLink]="'/participant-corner/lab'">Lab</button>
+        <button mat-menu-item (click)="openGoogleMeet()"><mat-icon >school</mat-icon>Join the Live Class</button>
+        <button mat-menu-item (click)="openQuizPollZone()"><mat-icon >quiz</mat-icon>  Quiz & Poll Zone</button>
+        <button mat-menu-item [routerLink]="'/participant-corner/lab'"><mat-icon >biotech</mat-icon>Lab</button>
         <!-- <button mat-menu-item [routerLink]="'/participant-corner/quiz-poll'">Quiz & Poll Zone</button> -->
-        <button mat-menu-item (click)="openQuizPollZone()">Quiz & Poll Zone</button>
+
+        
+
       </mat-menu>
-      <!-- <a mat-button [matMenuTriggerFor]="participantCornerMenu">Participant Corner</a> -->
+      <a mat-button [matMenuTriggerFor]="participantCornerMenu">Participant Corner</a>
 
     </nav>
   </mat-toolbar-row>
