--- a/src/app/components/our-courses/our-courses.component.scss
+++ b/src/app/components/our-courses/our-courses.component.scss
@@ -1,22 +1,72 @@
-.mat-expansion-panel-header {
-  font-size: 1em;      
-  padding: 20px;
-  height: auto;
-  .course-header h3 {
-    margin: 0;
-    font-size: 1.25em; 
-  }
-  .course-header p {
-    margin: 0;
-    color: gray;
-  }
-  .course-duration {
-    font-size: 0.9em;
-    color: darkgray;
-  }
-}
+.page-container {
+  margin-bottom: 20px;
+  padding: 1px;
+  border-radius: 5px; /* Rounded corners */
+  font-size: larger;
 
-.course-details {
-  margin-top: 10px;
-  margin-left: 10px;
+  .page-container-header {
+    margin-bottom: 20px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+
+    .page-container-header-text {
+      font-size: 1.5em;
+      padding-top: 20px;
+      padding-bottom: 15px;
+      padding-left: 5px;
+    }
+  }
+
+  .page-container-body {
+    padding-left: 20px;
+    padding-right: 20px;
+
+    .course-list {
+      mat-expansion-panel-header {
+        font-size: 1em;
+        padding: 20px;
+        height: auto;
+
+        .course-header h3 {
+          margin: 0;
+          font-size: 1.25em;
+        }
+
+        .course-header p {
+          margin: 0;
+          color: gray;
+        }
+
+        .course-duration {
+          font-size: 0.9em;
+          color: darkgray;
+        }
+      }
+
+      .course-details {
+        margin-top: 10px;
+        margin-left: 10px;
+      }
+    }
+
+    .announcement {
+      display: flex;
+      align-items: center;
+      font-size: 1.1em;
+      color: gray;
+
+      .announcement-icon {
+        margin-right: 8px;
+      }
+
+      .announcement-text {
+        font-weight: normal;
+        color: #333;
+      }
+    }
+
+    button {
+      margin-top: 20px;
+    }
+  }
 }
