--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,69 @@
 <!-- src/app/app.component.html -->
 <mat-toolbar color="primary">
-  <mat-toolbar-row> <span class="header">Think AI Today</span></mat-toolbar-row>
-
   <mat-toolbar-row>
-    <nav>
-      <a mat-button routerLink="/home">Home</a>
-      <a mat-button routerLink="/our-courses">Courses</a>
-      <!-- <a mat-button routerLink="/registration">Registration</a> -->
+    <span class="header">Think AI Today</span>
+</mat-toolbar-row>
+<mat-toolbar-row>
 
-      <a mat-button routerLink="/about-us">About Us</a>
-
-      <a mat-button routerLink="/trivia">Trivia </a>
-
-      <a mat-button routerLink="/news" class="updates-link">
-        <mat-icon >campaign</mat-icon> Updates
-      </a>
-      <!-- <a mat-button routerLink="/lab-station">Lab Station</a> -->
-      <!-- <a mat-button routerLink="/contact-us">Contact Us</a> -->
-      <mat-menu #participantCornerMenu="matMenu">
-        <button mat-menu-item (click)="openGoogleMeet()"><mat-icon >school</mat-icon>Join the Live Class</button>
-        <button mat-menu-item (click)="openQuizPollZone()"><mat-icon >quiz</mat-icon>  Quiz & Poll Zone</button>
-        <button mat-menu-item [routerLink]="'/participant-corner/lab'"><mat-icon >biotech</mat-icon>Lab</button>
-        <!-- <button mat-menu-item [routerLink]="'/participant-corner/quiz-poll'">Quiz & Poll Zone</button> -->
-
-        
-
-      </mat-menu>
-      <a mat-button [matMenuTriggerFor]="participantCornerMenu">Participant Corner</a>
-
-    </nav>
+    <!-- Hamburger Menu for Mobile -->
+    <button mat-icon-button (click)="sidenav.toggle()" class="mobile-menu-btn">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <!-- Regular Menu Items -->
+    <span >
+      <nav>
+        <a mat-button routerLink="/home" (click)="closeSidenav()">Home</a>
+        <a mat-button routerLink="/our-courses" (click)="closeSidenav()">Courses</a>
+        <a mat-button routerLink="/about-us" (click)="closeSidenav()">About Us</a>
+        <a mat-button routerLink="/news" class="updates-link" (click)="closeSidenav()">
+          <mat-icon>campaign</mat-icon> Updates
+        </a>
+        <mat-menu #participantCornerMenu="matMenu">
+          <button mat-menu-item (click)="openGoogleMeet()">
+            <mat-icon>school</mat-icon> Join the Live Class
+          </button>
+          <button mat-menu-item (click)="openQuizPollZone()">
+            <mat-icon>quiz</mat-icon> Quiz & Poll Zone
+          </button>
+          <button mat-menu-item [routerLink]="'/participant-corner/lab'" (click)="closeSidenav()">
+            <mat-icon>biotech</mat-icon> Lab
+          </button>
+        </mat-menu>
+        <a mat-button [matMenuTriggerFor]="participantCornerMenu" >Participant Corner</a>
+        <a mat-button routerLink="/trivia" (click)="closeSidenav()">Trivia</a>
+      </nav>
+    </span>
   </mat-toolbar-row>
 </mat-toolbar>
-<router-outlet></router-outlet>
+
+<mat-sidenav-container class="sidenav-container">
+  <!-- Sidenav for menu (left panel) -->
+  <mat-sidenav #sidenav mode="over" position="start">
+    <mat-nav-list>
+      <a mat-list-item routerLink="/home" (click)="closeSidenav()">Home</a>
+      <a mat-list-item routerLink="/our-courses" (click)="closeSidenav()">Courses</a>
+      <a mat-list-item routerLink="/about-us" (click)="closeSidenav()">About Us</a>
+      <a mat-list-item routerLink="/trivia" (click)="closeSidenav()">Trivia</a>
+      <a mat-list-item routerLink="/news" class="updates-link" (click)="closeSidenav()">
+        <mat-icon>campaign</mat-icon> Updates
+      </a>
+      <mat-menu #participantCornerMenu="matMenu">
+        <button mat-menu-item (click)="openGoogleMeet()">
+          <mat-icon>school</mat-icon> Join the Live Class
+        </button>
+        <button mat-menu-item (click)="openQuizPollZone()">
+          <mat-icon>quiz</mat-icon> Quiz & Poll Zone
+        </button>
+        <button mat-menu-item [routerLink]="'/participant-corner/lab'" (click)="closeSidenav()">
+          <mat-icon>biotech</mat-icon> Lab
+        </button>
+      </mat-menu>
+      <a mat-list-item [matMenuTriggerFor]="participantCornerMenu" (click)="closeSidenav()">Participant Corner</a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <!-- Main content area -->
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
