--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -61,8 +61,8 @@
   margin-bottom: 2px;
 
   mat-card {
-    background-color: #ff9900b4; // Bright background for visibility
-    border-left: 20px solid #ff9800;
+    background-color: white;//#ff9900b4; // Bright background for visibility
+    border-left: 20px solid #FF4081;
     color: #333;
 
     h2 {
