Delete unused components

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -37,9 +37,14 @@
         <div class="page-container-header-text">Contact Us</div>
       </div>
       <div class="page-container-body">
-        <p>
+        <!-- <p>
           For inquiries, please contact us through
           <a href="mailto:team@thinkaitoday.com">Email</a>
+        </p> -->
+        <p>
+          Have questions? Reach us via 
+          <a href="mailto:team@thinkaitoday.com">Email</a> or 
+          <a [routerLink]="['/form']" [queryParams]="{ code: 'CONTACT_US' }">Contact Us Form</a>
         </p>
       </div>
     </div>
