--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,8 @@
       <p>Don't miss this opportunity to explore how our course can benefit your child's future!</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button color="primary" routerLink="/registration">Register Now</button>
+      <button mat-button color="primary" [routerLink]="['/form']" [queryParams]="{ code: 'CONTACT_US' }">Register Now</button>
+      <!-- <a [routerLink]="['/form']" [queryParams]="{ code: 'CONTACT_US' }">Contact Us Form</a> -->
       <button mat-button color="accent" (click)="flashNews = false">Dismiss</button>
     </mat-card-actions>
   </mat-card>
