--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,17 @@
 <section class="flash-message" *ngIf="flashNews" > 
   <mat-card>
     <mat-card-content >
-      <h2>📢 Join Us for our Next and Final Open House!</h2>
-      <p>We invite you to join us for an Open House where you can learn more about our hands-on approach to teaching Generative AI.</p>
+      <h2>📢 Introduction to Generative AI classes starting soon!</h2>
+      <p>Class Details:</p>
       <ul>
-        <li><strong>Date:</strong> Saturday, November 30, 2024</li>
-        <li><strong>Time:</strong> 6:00 PM - 7:00 PM EST</li>
-        <li><strong>Location:</strong> <a href="https://meet.google.com/ogz-xrus-hnk" target="_blank">Google Meet</a></li>
+        <li><strong>Duration:</strong> December 6, 2024, to December 21, 2024</li>
+        <li><strong>Schedule:</strong> Every Friday and Saturday</li>
+        <li><strong>Time:</strong> 6:30 PM EST (45 minutes per session)</li>
+        <li><strong>Location: </strong> <a href="https://meet.google.com/ogz-xrus-hnk" target="_blank"> Google Meet</a></li>
       </ul>
-      <p>Don't miss this opportunity to explore how our course can benefit your child's future!</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button color="primary" [routerLink]="['/form']" [queryParams]="{ code: 'CONTACT_US' }">Register Now</button>
+      <button mat-button color="primary" [routerLink]="['/form']" [queryParams]="{ code: 'STUDENT_BEGINNER' }">Register Now</button>
       <!-- <a [routerLink]="['/form']" [queryParams]="{ code: 'CONTACT_US' }">Contact Us Form</a> -->
       <button mat-button color="accent" (click)="flashNews = false">Dismiss</button>
     </mat-card-actions>
