Fix the broken link on home page and registration state of intermediate course.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,7 +26,8 @@
     <h1>Unlock the Future: Generative AI Skills for Everyone</h1>
     <p>Empowering minds of all ages to understand and harness Generative AI as a vital life skill.</p>
     <br>
-    <button mat-raised-button color="accent" routerLink="/registration">Get Started</button>
+    <!-- <button mat-raised-button color="accent" routerLink="/registration">Get Started</button> -->
+    <button mat-raised-button color="accent" [routerLink]="['/form']" [queryParams]="{ code: 'STUDENT_BEGINNER' }">Get Started</button>
     <div><br></div>
     <p>
       Have questions? Reach us via 
