Update the flash and the news update.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="flash-message" *ngIf="flashNews" > 
   <mat-card>
     <mat-card-content >
-      <h2>📢 Introduction to Generative AI classes starting soon!</h2>
+      <h2>📢 Introduction to Generative AI Classes Have Begun!</h2>
       <p>Class Details:</p>
       <ul>
         <li><strong>Duration:</strong> December 6, 2024, to December 21, 2024</li>
