Add PARTNER_NETWORK form

--- a/src/app/components/google-form/google-form.component.html
+++ b/src/app/components/google-form/google-form.component.html
@@ -23,4 +23,12 @@
 >
   Loading…
 </iframe>
+<iframe
+*ngSwitchCase="'PARTNER_NETWORK'"
+src="https://forms.gle/otUeM7DCXY9qQ42q7"
+width="100%"
+height="800"
+>
+Loading…
+</iframe>
 </div>
